app scaffolding + signup, login, logout

--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "^0.11.0"
+    "events": "^1.0.2",
+    "flux": "^2.1.1",
+    "invariant": "^2.1.0",
+    "keymirror": "^0.1.1",
+    "object-assign": "^4.0.1",
+    "react-native": "^0.11.0",
+    "react-native-keychain": "^0.2.5",
+    "superagent": "^1.4.0"
   }
 }
