--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "koa": "^1.0.0",
     "koa-bodyparser": "^2.0.1",
     "koa-error": "^1.1.3",
+    "koa-logger": "^1.3.0",
     "koa-passport": "^1.2.0",
     "koa-router": "^5.1.2",
     "passport": "^0.3.0",
