--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "object-assign": "^4.0.1",
     "react-native": "^0.11.0",
     "react-native-keychain": "^0.2.5",
+    "react-native-refreshable-listview": "^1.3.0",
     "superagent": "^1.4.0"
   }
 }
