--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "keymirror": "^0.1.1",
     "object-assign": "^4.0.1",
     "react-native": "^0.11.0",
+    "react-native-keyboardevents": "^0.4.5",
     "react-native-keychain": "^0.2.5",
     "react-native-refreshable-listview": "^1.3.0",
     "superagent": "^1.4.0"
