--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-keyboardevents": "^0.4.5",
     "react-native-keychain": "^0.2.5",
     "react-native-refreshable-listview": "^1.3.0",
+    "react-timer-mixin": "^0.13.3",
     "superagent": "^1.4.0"
   }
 }
