--- a/package.json
+++ b/package.json
@@ -5,22 +5,10 @@
   "scripts": {
     "start": "node_modules/react-native/packager/packager.sh",
     "test": "npm run mocha-test test/integration",
-    "mocha-test": "mocha --recursive --compilers js:babel/register",
+    "mocha-test": "mocha --recursive --compilers js:babel-core/register",
     "compile:test": "TARGET=test node tasks/compile.js",
     "compile:staging": "TARGET=staging node tasks/compile.js",
     "install:staging": "PHONE=true TARGET=staging node tasks/compile.js"
-  },
-  "babel": {
-    "whitelist": [
-      "es6.modules",
-      "es6.classes",
-      "es6.arrowFunctions",
-      "es6.constants",
-      "es6.spread",
-      "es6.blockScoping",
-      "es6.parameters",
-      "es6.destructuring"
-    ]
   },
   "dependencies": {
     "events": "1.1.0",
@@ -37,7 +25,37 @@
   },
   "devDependencies": {
     "appium": "1.4.13",
-    "babel": "6.3.13",
+    "babel-core": "^6.1.20",
+    "babel-eslint": "4.1.4",
+    "babel-plugin-external-helpers-2": "^6.1.4",
+    "babel-plugin-syntax-async-functions": "^6.0.14",
+    "babel-plugin-syntax-class-properties": "^6.0.14",
+    "babel-plugin-syntax-flow": "^6.0.14",
+    "babel-plugin-syntax-jsx": "^6.0.14",
+    "babel-plugin-syntax-trailing-function-commas": "^6.0.14",
+    "babel-plugin-transform-class-properties": "^6.0.14",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.0.14",
+    "babel-plugin-transform-es2015-block-scoping": "^6.0.18",
+    "babel-plugin-transform-es2015-classes": "^6.1.2",
+    "babel-plugin-transform-es2015-computed-properties": "^6.0.14",
+    "babel-plugin-transform-es2015-constants": "^6.0.15",
+    "babel-plugin-transform-es2015-destructuring": "^6.0.18",
+    "babel-plugin-transform-es2015-for-of": "^6.0.14",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.1.3",
+    "babel-plugin-transform-es2015-parameters": "^6.0.18",
+    "babel-plugin-transform-es2015-shorthand-properties": "^6.0.14",
+    "babel-plugin-transform-es2015-spread": "^6.0.14",
+    "babel-plugin-transform-es2015-template-literals": "^6.0.14",
+    "babel-plugin-transform-flow-strip-types": "^6.0.14",
+    "babel-plugin-transform-object-assign": "^6.0.14",
+    "babel-plugin-transform-object-rest-spread": "^6.0.14",
+    "babel-plugin-transform-react-display-name": "^6.0.14",
+    "babel-plugin-transform-react-jsx": "^6.0.18",
+    "babel-plugin-transform-regenerator": "^6.0.18",
+    "babel-polyfill": "^6.0.16",
+    "babel-register": "^6.3.13",
+    "babel-types": "^6.1.2",
+    "babylon": "^6.1.2",
     "chai": "3.4.1",
     "chai-as-promised": "5.1.0",
     "colors": "1.0.3",
@@ -48,6 +66,7 @@
     "promise": "*",
     "underscore": "1.8.3",
     "wd": "0.4.0",
+    "webpack": "^1.12.9",
     "yiewd": "0.6.0"
   }
 }
