upgrade to React Native 0.16.0

--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,18 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
-Pods
+
+# Android/IJ
+#
+.idea
+.gradle
+local.properties
 
 # node.js
 #
 node_modules/
 npm-debug.log
 
+# Custom
+Pods
 /testbuild
