--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "events": "1.1.0",
     "flux": "2.1.1",
     "invariant": "2.2.0",
+    "jstz": "1.0.7",
     "keymirror": "0.1.1",
+    "moment-timezone": "0.4.1",
     "object-assign": "4.0.1",
     "react": "15.0.2",
     "react-native": "0.26.0",
