upgrade react-native to 0.33.0

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "events": "1.1.0",
     "flux": "2.1.1",
     "invariant": "2.2.0",
+    "is-promise": "2.1.0",
     "jstz": "1.0.7",
     "keymirror": "0.1.1",
     "moment-timezone": "0.4.1",
     "object-assign": "4.0.1",
-    "react": "15.0.2",
-    "react-native": "0.26.0",
-    "react-native-keyboardevents": "0.4.5",
+    "react": "15.3.1",
+    "react-native": "0.33.0",
     "react-native-keychain": "0.2.6",
     "react-timer-mixin": "0.13.3",
     "superagent": "1.8.3",
