--- a/ios/Staging.xcconfig
+++ b/ios/Staging.xcconfig
@@ -1,3 +1,4 @@
-#include "Pods/Target Support Files/Pods/Pods.staging.xcconfig"
+#include "Pods/Target Support Files/Pods-Sample/Pods-Sample.staging.xcconfig"
+
 
 GCC_PREPROCESSOR_DEFINITIONS = $(inherited) kEnvironment="@\"staging\""
