--- a/ios/Debug.xcconfig
+++ b/ios/Debug.xcconfig
@@ -1,3 +1,3 @@
-#include "Pods/Target Support Files/Pods/Pods.debug.xcconfig"
+#include "Pods/Target Support Files/Pods-Sample/Pods-Sample.debug.xcconfig"
 
 GCC_PREPROCESSOR_DEFINITIONS = $(inherited) kEnvironment="@\"debug\""
