--- a/package.json
+++ b/package.json
@@ -23,31 +23,31 @@
     ]
   },
   "dependencies": {
-    "events": "^1.0.2",
-    "flux": "^2.1.1",
-    "invariant": "^2.1.0",
-    "keymirror": "^0.1.1",
-    "object-assign": "^4.0.1",
-    "react-native": "^0.12.0",
-    "react-native-keyboardevents": "^0.4.5",
-    "react-native-keychain": "^0.2.5",
-    "react-native-refreshable-listview": "^1.3.0",
-    "react-timer-mixin": "^0.13.3",
-    "superagent": "^1.4.0"
+    "events": "1.1.0",
+    "flux": "2.1.1",
+    "invariant": "2.2.0",
+    "keymirror": "0.1.1",
+    "object-assign": "4.0.1",
+    "react-native": "0.16.0",
+    "react-native-keyboardevents": "0.4.5",
+    "react-native-keychain": "0.2.6",
+    "react-native-refreshable-listview": "1.3.0",
+    "react-timer-mixin": "0.13.3",
+    "superagent": "1.5.0"
   },
   "devDependencies": {
     "appium": "1.4.13",
-    "babel": "^5.6.0",
-    "chai": "^3.2.0",
-    "chai-as-promised": "^5.1.0",
-    "colors": "^1.0.3",
-    "ios-deploy": "^1.7.0",
-    "koa": "^0.21.0",
-    "koa-bodyparser": "^2.0.1",
-    "mocha": "^2.2.5",
-    "promise": "^7.0.4",
-    "underscore": "^1.8.3",
-    "wd": "^0.3",
-    "yiewd": "^0.6.0"
+    "babel": "6.3.13",
+    "chai": "3.4.1",
+    "chai-as-promised": "5.1.0",
+    "colors": "1.0.3",
+    "ios-deploy": "1.8.3",
+    "koa": "1.1.2",
+    "koa-bodyparser": "2.0.1",
+    "mocha": "2.3.4",
+    "promise": "*",
+    "underscore": "1.8.3",
+    "wd": "0.4.0",
+    "yiewd": "0.6.0"
   }
 }
