--- a/package.json
+++ b/package.json
@@ -16,57 +16,32 @@
     "invariant": "2.2.0",
     "keymirror": "0.1.1",
     "object-assign": "4.0.1",
-    "react-native": "0.16.0",
+    "react": "0.14.7",
+    "react-native": "0.24.1",
     "react-native-keyboardevents": "0.4.5",
     "react-native-keychain": "0.2.6",
     "react-native-refreshable-listview": "1.3.0",
     "react-timer-mixin": "0.13.3",
-    "superagent": "1.5.0"
+    "superagent": "1.8.3",
+    "underscore": "1.8.3",
+    "underscore.string": "3.2.2"
   },
   "devDependencies": {
     "appium": "1.5.1",
-    "babel-core": "^6.1.20",
-    "babel-eslint": "4.1.4",
-    "babel-plugin-external-helpers-2": "^6.1.4",
-    "babel-plugin-syntax-async-functions": "^6.0.14",
-    "babel-plugin-syntax-class-properties": "^6.0.14",
-    "babel-plugin-syntax-flow": "^6.0.14",
-    "babel-plugin-syntax-jsx": "^6.0.14",
-    "babel-plugin-syntax-trailing-function-commas": "^6.0.14",
-    "babel-plugin-transform-class-properties": "^6.0.14",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.0.14",
-    "babel-plugin-transform-es2015-block-scoping": "^6.0.18",
-    "babel-plugin-transform-es2015-classes": "^6.1.2",
-    "babel-plugin-transform-es2015-computed-properties": "^6.0.14",
-    "babel-plugin-transform-es2015-constants": "^6.0.15",
-    "babel-plugin-transform-es2015-destructuring": "^6.0.18",
-    "babel-plugin-transform-es2015-for-of": "^6.0.14",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.1.3",
-    "babel-plugin-transform-es2015-parameters": "^6.0.18",
-    "babel-plugin-transform-es2015-shorthand-properties": "^6.0.14",
-    "babel-plugin-transform-es2015-spread": "^6.0.14",
-    "babel-plugin-transform-es2015-template-literals": "^6.0.14",
-    "babel-plugin-transform-flow-strip-types": "^6.0.14",
-    "babel-plugin-transform-object-assign": "^6.0.14",
-    "babel-plugin-transform-object-rest-spread": "^6.0.14",
-    "babel-plugin-transform-react-display-name": "^6.0.14",
-    "babel-plugin-transform-react-jsx": "^6.0.18",
-    "babel-plugin-transform-regenerator": "^6.0.18",
-    "babel-polyfill": "^6.0.16",
-    "babel-register": "^6.3.13",
-    "babel-types": "^6.1.2",
-    "babylon": "^6.1.2",
-    "chai": "3.4.1",
+    "babel-plugin-syntax-async-functions": "^6.5.0",
+    "babel-plugin-transform-class-properties": "^6.6.0",
+    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "chai": "3.4.0",
     "chai-as-promised": "5.1.0",
-    "colors": "1.0.3",
-    "ios-deploy": "1.8.3",
+    "colors": "1.1.2",
+    "ios-deploy": "1.8.2",
     "koa": "1.1.2",
     "koa-bodyparser": "2.0.1",
-    "mocha": "2.3.4",
-    "promise": "*",
-    "underscore": "1.8.3",
+    "mocha": "2.4.5",
+    "node-inspector": "0.12.3",
+    "rnpm-plugin-upgrade": "^0.26.0",
     "wd": "0.4.0",
-    "webpack": "^1.12.9",
     "yiewd": "0.6.0"
   }
 }
